# FileService

./: .env  .gitignore  Cargo.toml  README.md  casdoorConf.toml  credentials.json  downloaded_file.epub  parse_pdf_cover.py
src/: casdoor.rs  main.rs  routes.rs
src/controller/: file.rs  helloworld.rs  mod.rs
src/controller/s3/: local.rs  mod.rs  presigned.rs
src/controller/v1/file/: file.rs  mod.rs  uploader.rs
src/controller/v1/parse/: book.rs  epub.rs  mod.rs
src/models/: epub.rs  mod.rs  model.rs
src/utils/: file_util.rs  filename_parse.rs  http_util.rs  mod.rs
