[package]
name = "fileservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0" # Actix web is a simple, pragmatic and extremely fast web framework for Rust.
derive_more = "0.99" # Convenience macros to derive traits easily
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] } # A safe, extensible ORM and Query Builder for PostgreSQL, SQLite, and MySQL.
dotenv = "0.15" # A dotenv implementation for Rust.
env_logger = "0.9" # A logging implementation for log which is configured via an environment variable.
futures = "0.3.8" # An implementation of futures and streams featuring zero allocations, composability, and iterator-like interfaces.
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] } # A generic serialization/de-serialization framework.
serde_json = "1.0" # A JSON serialization file format.
