[package]
name = "fileservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.0" # Actix web is a simple, pragmatic and extremely fast web framework for Rust.
actix-multipart = "0.7.2"
aws-config = "1.5.9"
aws-sdk-s3 = { version = "1.59.0", features = ["http-1x"] }
aws-smithy-runtime-api = "1.7.2"
derive_more = "0.99" # Convenience macros to derive traits easily
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] } # A safe, extensible ORM and Query Builder for PostgreSQL, SQLite, and MySQL.
dotenv = "0.15" # A dotenv implementation for Rust.
env_logger = "0.9" # A logging implementation for log which is configured via an environment variable.
futures = "0.3.8" # An implementation of futures and streams featuring zero allocations, composability, and iterator-like interfaces.
http = "1.1.0"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] } # A generic serialization/de-serialization framework.
serde_json = "1.0" # A JSON serialization file format.
epub = "2.1.2"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web-httpauth = "0.6"
casdoor-rust-sdk = "1.3.0"
tokio = "1.42.0"
uuid = { version = "1.0", features = ["v4"] }
